samples/_failures_safe/1761160180_dee1af_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_201be1e4.c: In function ‘main’:
./samples/SAFE/__tmp_201be1e4.c:125:29: error: expected ‘]’ at end of input
  125 |     if (len > 0 && input[len
      |                             ^
      |                             ]
./samples/SAFE/__tmp_201be1e4.c:125:5: error: expected declaration or statement at end of input
  125 |     if (len > 0 && input[len
      |     ^~
